<resources>
    <string name="app_name">Learn Foreign Vocabulary</string>
    <string name="home">Home</string>
    <string name="vocabulary">Vocabulary</string>
    <string name="practice">Practice</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragmentHome">Home</string>
    <string name="fragmentVocabulary">Vocabulary List</string>
    <string name="fragmentPractice">Practice</string>
    <string name="desiredConfiguration">Select Desired Configuration:</string>
    <string name="nativeLanguage">Native Language:</string>
    <string name="foreignLanguage">Foreign Language:</string>
    <string name="nativeLanguageCD">A menu allowing selection of a native language</string>
    <string name="foreignLanguageCD">A menu allowing selection of a foreign language</string>
    <string name="actionButtonDescription">Allows user to add vocabulary to the list</string>
    <string name="deleteButtonDescription">Allows user to delete a vocabulary row from the list</string>
    <string name="addNewVocabularyFragment">Add New Vocabulary</string>
    <string name="confirmButton">CONFIRM</string>>
    <string-array name="NativeLanguages">
        <item>English</item>
        <item>Welsh</item>
    </string-array>

    <string-array name="ForeignLanguages">
        <item>French</item>
        <item>Spanish</item>
        <item>German</item>
    </string-array>
</resources>