<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/navigation_graph"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="uk.ac.aber.dcs.cs31620.translate.ui.home.HomeFragment"
        android:label="@string/fragmentHome" />
    <fragment
        android:id="@+id/navigation_vocabulary"
        android:name="uk.ac.aber.dcs.cs31620.translate.ui.vocabulary.VocabularyFragment"
        android:label="@string/fragmentVocabulary" />
    <fragment
        android:id="@+id/navigation_practice"
        android:name="uk.ac.aber.dcs.cs31620.translate.ui.practice.PracticeFragment"
        android:label="@string/fragmentPractice" />
</navigation>