<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ui.home.HomeFragment">

    <TextView
        android:id="@+id/nativeLanguageText"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="200dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/nativeLanguage"
        android:textColor="#000000"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/foreignLanguageText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/configurationText" />

    <Spinner
        android:id="@+id/nativeLanguageSpinner"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginStart="23dp"
        android:layout_marginTop="115dp"
        android:layout_marginBottom="200dp"
        android:contentDescription="Language"
        app:layout_constraintBottom_toTopOf="@+id/foreignLanguageSpinner"
        app:layout_constraintStart_toEndOf="@+id/nativeLanguageText"
        app:layout_constraintTop_toBottomOf="@+id/configurationText" />

    <Spinner
        android:id="@+id/foreignLanguageSpinner"
        android:layout_width="150dp"
        android:layout_height="48dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="40dp"
        android:contentDescription="Language"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nativeLanguageSpinner" />

    <TextView
        android:id="@+id/configurationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="158dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/desiredConfiguration"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.064"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="40dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="40dp" />

    <TextView
        android:id="@+id/foreignLanguageText"
        android:layout_width="158dp"
        android:layout_height="48dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="22dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/foreignLanguage"
        android:textColor="#000000"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/foreignLanguageSpinner"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nativeLanguageText" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="105dp" />


</androidx.constraintlayout.widget.ConstraintLayout>